<?xml version="1.0" encoding="utf-8"?>
<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->
<resources>
    <!-- Simple strings. -->
    <!--<string name="app_name">Xendovo</string>-->
    <string name="visualization_spinner_text">Visualization:</string>
    <string name="distance_label">Distance:</string>
    <string name="field_of_view_label">Field of View:</string>
    <string name="img_description">Profile Image</string>
    <string name="username">Username</string>
    <string name="biography">Hello! Aspiring physicist and mathematician here to show off my mad skillz!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginTextView">Login</string>
    <string name="email">email</string>
    <string name="passwordText">password</string>
    <string name="loginButtonText">login</string>
    <string name="register">Register</string>
    <string name="registerButtonText">REGISTER</string>
    <string name="usernameHint">username</string>
    <string name="no_account_register">No account? Register!</string>
    <string name="gravity_label">Gravity:</string>
    <string name="linear_acceleration_label">Linear Acceleration:</string>
    <string name="efficiency_label">Efficiency:</string>
    <string name="background_label">Background:</string>
    <string name="solid_color_radio_button">Solid Color</string>
    <string name="image_radio_button">Image</string>
    <string name="change_color_button_text">Change Color</string>
    <string name="equation_selection_label">Equation Selection:</string>
    <string name="examples_radio_button">Examples</string>
    <string name="user_defined_radio_button">Custom</string>
    <string name="equation_name_label">Title:</string>
    <string name="new_button">New</string>
    <string name="copy_button">Copy</string>
    <string name="delete_button">Delete</string>
    <string name="equation_label">Equation:</string>
    <string name="syntax_check_result">Syntax check result</string>
    <string name="flip_normals_checkbox">Flip Normals</string>
    <string name="fluid_surface_checkbox">Fluid Surface</string>
    <string name="gyroscope_compensation_checkbox">Gyroscope Compensation</string>
    <string name="smooth_sphere_surface_checkbox">Smooth Sphere Surface</string>
    <string name="showUIButtonText">Show Controls</string>
    <string name="hideUIButtonText">Hide Controls</string>
    <string name="update_preview_button_text">Update Preview Thumbnail</string>
    <string name="fps_label_text">FPS:</string>
    <string name="app_id">ca-app-pub-7713469970034463~5658759703</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/9214589741</string><!--test ad-->
    <!--<string name="ad_unit_id">ca-app-pub-7713469970034463/6568516692</string>--><!--official ad-->
</resources>